<resources>
    <string name="app_name">Jajar Genjang</string>
    <string name="jg_intro">Masukan Alas dan Tinggi Jajar Genjang Dibawah Ini!</string>
    <string name="alas">Alas (cm)</string>
    <string name="tinggi">Tinggi (cm)</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="luas_x">Luas : %1$.2f cm</string>
    <string name="alas_invalid">Alas tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="bagikan_template">Alas: %1$s cm\nTinggi: %2$s cm\n%3$s </string>
    <string name="copyright">Hitung Luas Jajargenjang merupakan sebuah aplikasi Android untuk menghitung luas jajar genjang</string>
    <string name="hasil_x">Luas: %1$.2f cm</string>
    <string name="value_xx">Hasil: %1$.1f cm</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
</resources>